--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ discord.py==1.2.3
 idna==2.8
 idna-ssl==1.1.0
 multidict==4.5.2
+PyMySQL==0.9.3
 requests==2.22.0
 typing-extensions==3.7.4
 urllib3==1.25.3
